fix typo in view

--- a/component/taskList/taskList.view.html
+++ b/component/taskList/taskList.view.html
@@ -5,7 +5,7 @@
         {{task.name}}
     </div>
 </n-template>
-<h2>Crete new task</h2>
+<h2>Create new task</h2>
 <form  id="form">
     <input type="text" id="new-task-name">
     <input type="submit" value="create">
